bp_origin improvements

--- a/src/main/webapp/customer/edit.html
+++ b/src/main/webapp/customer/edit.html
@@ -357,6 +357,9 @@
                                         <select id="bp_origin" name="bp_origin" ></select>
                                         <span class="help-block">Origem do prospect/cliente</span>
                                     </div>
+                                        <a data-original-title="Informação" data-content="clique para abrir a documentação" data-help-url='/docs/referral.html' rel="popover" class="_popover_basic _help">
+                                        <img src="/images/info.gif" width="20">
+                                        </a>
                                 </div>
                             </div>
                         </div>
