--- a/src/main/webapp/reports/center.html
+++ b/src/main/webapp/reports/center.html
@@ -199,6 +199,11 @@
           </a>
         </li>
         <li>
+          <a href="/financial_cashier/cashier_report" class="_popover" target="_blancccck" rel="popover" data-content="Relatório Sintético de caixas fechados" data-original-title="Caixas Sintético">
+            <img width='32' src="/images/close_cash.png"/>
+          </a>
+        </li>
+        <li>
           <a href="/financial_admin/dre_report_tree" class="_popover" target="_blancccck" rel="popover" data-content="Demonstração do resultado do exercício" data-original-title="DRE">
             <img width='32' src="/images/dre.png"/>
           </a>
