rapid add customer - birthday and offsale

--- a/src/main/webapp/financial_cashier/register_payment.html
+++ b/src/main/webapp/financial_cashier/register_payment.html
@@ -133,7 +133,7 @@
               <div class="input">
                 <div class="inline-inputs">
                     <span style="float:left; padding-right:10px" class="input-prepend">
-                      <span class="add-on"><img width="16" src="/images/cut.png"></span> 
+                      <span class="add-on hide_mobile"><img width="16" src="/images/cut.png"></span> 
                       <select class="notselect2" name="activity" id='activity'></select>
                     </span><button type='button' class="btn" id='add_activity'><img src='/images/add.png' width="16px" /></button>
                 </div>
@@ -226,21 +226,21 @@
                       <input disabled='true' class="mini currency" type="text" name='totalPointsOnBuy' id='totalPointsOnBuy' value="00.00">
                     </div>
                     <button class="btn success b_payment" type="button" id='b_payment'>
-                        <img src='/images/paid.png' width="16px"/>
+                        <img class='hide_mobile' src='/images/paid.png' width="16px"/>
                         Pagar
                     </button>
                     <input type="hidden" class="has-anvisa-module lift:SecuritySnippet.hasAnvisaModule" value="1">
                     <button class="lift:SecuritySnippet.hasNotAnvisaModule btn primary print_command" alt="Imprimir comanda" type="button" id="print_command">
-                        <img src='/images/print.png' width="16px"/>   Imprimir
+                        <img class='hide_mobile' src='/images/print.png' width="16px"/>   Imprimir
                     </button>
                     <button class="lift:SecuritySnippet.hasAnvisaModule btn primary print_command" alt="Imprimir ticket" type="button" id="print_command">
-                        <img src='/images/print.png' width="16px"/>   Ticket
+                        <img class='hide_mobile' src='/images/print.png' width="16px"/>   Ticket
                     </button>
                     <button class="btn primary revert_price" title="Restaurar preço original de todos os itens"  type="button" id='revert_price'>
-                        <img src='/images/arrow_redo.png' width="16px"/>   Restaurar
+                        <img class='hide_mobile' src='/images/arrow_redo.png' width="16px"/>   Restaurar
                     </button>
                     <button class="btn danger remove_treatment" title="Excluir comanda completa" type="button" id=''>
-                        <img src='/images/delete.png' width="16px"/>   Excluir <span data-i18n='Comanda'></span>
+                        <img class='hide_mobile' src='/images/delete.png' width="16px"/>   Excluir <span data-i18n='Comanda'></span>
                     </button>
                   </div>
                 </div>
@@ -291,20 +291,20 @@
                   <input disabled='true' class="mini currency" type="text" name='totalPointsOnBuy_baixo' id='totalPointsOnBuy_baixo' value="00.00">
                 </div>
                 <button class="btn success b_payment" type="button" id='b_payment'>
-                  <img src='/images/paid.png' width="16px"/>   Pagar
+                  <img class='hide_mobile' src='/images/paid.png' width="16px"/>   Pagar
                 </button>
                 <input type="hidden" class="has-anvisa-module lift:SecuritySnippet.hasAnvisaModule" value="1">
                 <button class="lift:SecuritySnippet.hasNotAnvisaModule btn primary print_command" alt="Imprimir comanda" type="button" id="print_command">
-                    <img src='/images/print.png' width="16px"/>   Imprimir
+                    <img class='hide_mobile' src='/images/print.png' width="16px"/>   Imprimir
                 </button>
                 <button class="lift:SecuritySnippet.hasAnvisaModule btn primary print_command" alt="Imprimir ticket" type="button" id="print_command">
-                    <img src='/images/print.png' width="16px"/>   Ticket
+                    <img class='hide_mobile' src='/images/print.png' width="16px"/>   Ticket
                 </button>
                 <button class="btn primary revert_price" title="Restaurar preço original de todos os Items"  type="button" id='revert_price'>
-                  <img src='/images/arrow_redo.png' width="16px"/>   Restaurar
+                  <img class='hide_mobile' src='/images/arrow_redo.png' width="16px"/>   Restaurar
                 </button>
                 <button class="btn danger remove_treatment" title="Excluir Comanda completa" type="button">
-                  <img src='/images/delete.png' width="16px"/>   Excluir <span data-i18n='Comanda'></span>
+                  <img class='hide_mobile' src='/images/delete.png' width="16px"/>   Excluir <span data-i18n='Comanda'></span>
                 </button>
               </div>
             </div>
