rapid add customer - origin operator fix

--- a/src/main/webapp/templates-hidden/calendar_true.html
+++ b/src/main/webapp/templates-hidden/calendar_true.html
@@ -226,14 +226,6 @@
                     </div>
                     <div class="input-prepend" style='float:left; padding-right:10px'>
                       <select class="small" id="rapid_customer_mobile_phone_op" name="rapid_customer_mobile_phone_op" size="30" type="text">
-                        <option value="0">Selecione uma operadora</option>
-                        <option value="1">Tim</option>
-                        <option value="2">Claro</option>
-                        <option value="3">CTBC Telecom</option>
-                        <option value="4">Oi</option>
-                        <option value="5">Vivo</option>
-                        <option value="6">Sercontel</option>
-                        <option value="7">Nextel</option>
                       </select>
                     </div>
                 </div>
@@ -267,6 +259,17 @@
                   <div class='inline-inputs'>
                     <div class="input-prepend" style='float:left; padding-right:10px'>
                       <select class="medium" id="rapid_customer_offsale" name="rapid_customer_offsale" size="30" type="text">
+                      </select>
+                    </div>
+                </div>
+               </div>
+            </div>
+            <div class="clearfix">
+              <label for="rapid_customer_origin">Origen</label>        
+               <div class="input">
+                  <div class='inline-inputs'>
+                    <div class="input-prepend" style='float:left; padding-right:10px'>
+                      <select class="medium" id="rapid_customer_origin" name="rapid_customer_origin" size="30" type="text">
                       </select>
                     </div>
                 </div>
