--- a/src/main/webapp/activity/list.html
+++ b/src/main/webapp/activity/list.html
@@ -60,7 +60,7 @@
 		<tbody>
 			<tr class="lift:ActivitySnippet:activitys">
 				<td>
-					<f:id></f:id>
+					<f:colorid></f:colorid>
 				</td>
 				<td>
 					<f:name></f:name>
